// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YAxis it renders consistently 1`] = `
<div
  className="YAxis"
>
  <svg
    className="YAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="10%"
      y1="10%"
      y2="90%"
    />
    <g
      className="YAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="5%"
          x2="10%"
          y1="130%"
          y2="130%"
        />
        <div
          axis={1}
          label="0"
          xPos={5}
          yPos={130}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="5%"
          x2="10%"
          y1="90%"
          y2="90%"
        />
        <div
          axis={1}
          label="10"
          xPos={5}
          yPos={90}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="5%"
          x2="10%"
          y1="50%"
          y2="50%"
        />
        <div
          axis={1}
          label="20"
          xPos={5}
          yPos={50}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="5%"
          x2="10%"
          y1="10%"
          y2="10%"
        />
        <div
          axis={1}
          label="30"
          xPos={5}
          yPos={10}
        >
          MockAxisTickLabel 
        </div>
      </g>
    </g>
  </svg>
</div>
`;

exports[`YAxis it renders consistently with an explicit config 1`] = `
<div
  className="YAxis"
>
  <svg
    className="YAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="10%"
      y1="10%"
      y2="90%"
    />
    <g
      className="YAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="0%"
          x2="10%"
          y1="90%"
          y2="90%"
        />
        <div
          axis={1}
          label="0"
          xPos={0}
          yPos={90}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="0%"
          x2="10%"
          y1="67.77777777777777%"
          y2="67.77777777777777%"
        />
        <div
          axis={1}
          label="10"
          xPos={0}
          yPos={67.77777777777777}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="0%"
          x2="10%"
          y1="45.55555555555556%"
          y2="45.55555555555556%"
        />
        <div
          axis={1}
          label="20"
          xPos={0}
          yPos={45.55555555555556}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="0%"
          x2="10%"
          y1="23.33333333333333%"
          y2="23.33333333333333%"
        />
        <div
          axis={1}
          label="30"
          xPos={0}
          yPos={23.33333333333333}
        >
          MockAxisTickLabel 
        </div>
      </g>
    </g>
  </svg>
</div>
`;
